Use Java 25 to run HTTP benchmark